# nef2jpg

./: README.de.md  README.md  pyproject.toml
man/: nef2jpg.1
src/raw_to_jpg/: README.en.md  __init__.py  cli.py
test/: man.py  test.py
